# SimpleRenderEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  em-build.sh
.github/workflows/: cmake.yml
cmake/: AddRegressionTest.cmake  AddSreTest.cmake  FindSDL2.cmake  FindSDL2_image.cmake  SreTest.cmake
examples/: 05_obj-viewer.cpp  09_picking.cpp  11_sprite-example.cpp  13_benchmark64k.cpp  18_FPS-camera.cpp  19_Flight-camera.cpp  CMakeLists.txt
include/sre/: Camera.hpp  Color.hpp  Framebuffer.hpp  Mesh.hpp  MeshTopology.hpp  RenderPass.hpp  Renderer.hpp  SDLRenderer.hpp  Texture.hpp  imgui_addon.hpp
regression_tests/: CMakeLists.txt
regression_tests/FPS-camera/: CMakeLists.txt  FPS-camera.cpp
regression_tests/benchmark64k-heavy/: CMakeLists.txt  benchmark64k-heavy.cpp
regression_tests/bumpmap/: CMakeLists.txt  bumpmap.cpp
regression_tests/custom-mesh-layout-default-values/: CMakeLists.txt
regression_tests/custom-mesh-layout-ints/: CMakeLists.txt
regression_tests/deallocation/: CMakeLists.txt
regression_tests/gamma/: CMakeLists.txt  gamma.cpp
regression_tests/imgui-color-test/: CMakeLists.txt
regression_tests/imgui-demo-test/: CMakeLists.txt
regression_tests/matrix-uniforms/: CMakeLists.txt
regression_tests/multi-cameras/: CMakeLists.txt
regression_tests/multiple-lights/: CMakeLists.txt  multiple-lights.cpp
regression_tests/multiple-materials/: CMakeLists.txt
regression_tests/particle-sprite/: CMakeLists.txt  particle-sprite.cpp
regression_tests/particle-test/: CMakeLists.txt
regression_tests/pbr-test/: CMakeLists.txt  pbr-test.cpp
regression_tests/polygon-offset-example/: CMakeLists.txt
regression_tests/primitives-test/: CMakeLists.txt
regression_tests/render-depth/: CMakeLists.txt
regression_tests/screen-point-to-ray/: CMakeLists.txt  screen-point-to-ray.cpp
regression_tests/set-icon/: CMakeLists.txt
regression_tests/shadow-test/: CMakeLists.txt  shadow-test.cpp
regression_tests/spinning-sphere-cubemap/: CMakeLists.txt  spinning-sphere-cubemap.cpp
regression_tests/sprite-test/: CMakeLists.txt  sprite-test.cpp
regression_tests/static_vertex_attribute/: CMakeLists.txt
regression_tests/stencil_test/: CMakeLists.txt  stencil_test.cpp
regression_tests/texture-test/: CMakeLists.txt  texture-test.cpp
regression_tests/update_shader/: CMakeLists.txt
src/sre/: Camera.cpp  Color.cpp  Framebuffer.cpp  Inspector.cpp  Mesh.cpp  RenderPass.cpp  SDLRenderer.cpp  Shader.cpp  Texture.cpp  imgui_addon.cpp  imgui_sre.cpp
src/sre/impl/: GL.cpp
submodules/: CMakeLists.txt
test/: CMakeLists.txt  FPS-camera.cpp  benchmark64k-heavy.cpp  imgui-demo-test.cpp  imgui_demo.cpp  sprite-test.cpp
test/regression_tests/: CMakeLists.txt
test/regression_tests/FPS-camera/: CMakeLists.txt  run-test.sh
test/unit_tests/: CMakeLists.txt  inaugural-test.cpp
test_data/: CMakeLists.txt
test_data/FPS-camera/: run-test.sh  test.ui_events  test_original.ui_events
unit_tests/: CMakeLists.txt  inaugural-test.cpp
