#Add regression testing directories

add_subdirectory(benchmark64k-heavy)
add_subdirectory(bumpmap)
add_subdirectory(custom-mesh-layout-default-values)
add_subdirectory(custom-mesh-layout-ints)
add_subdirectory(deallocation)
add_subdirectory(FPS-camera)
add_subdirectory(gamma)
add_subdirectory(imgui-color-test)
add_subdirectory(imgui-demo-test)
add_subdirectory(matrix-uniforms)
add_subdirectory(multi-cameras)
add_subdirectory(multiple-lights)
add_subdirectory(multiple-materials)
add_subdirectory(particle-sprite)
add_subdirectory(particle-test)
add_subdirectory(pbr-test)
add_subdirectory(polygon-offset-example)
add_subdirectory(primitives-test)
add_subdirectory(render-depth)
add_subdirectory(screen-point-to-ray)
add_subdirectory(set-icon)
add_subdirectory(shadow-test)
add_subdirectory(spinning-sphere-cubemap)
add_subdirectory(sprite-test)
add_subdirectory(static_vertex_attribute)
add_subdirectory(stencil_test)
add_subdirectory(texture-test)
add_subdirectory(update_shader)
